--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 GenieFramework = "a59fdf5c-6bf0-4f5d-949c-a137c9e2f353"
+JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 NNlib = "872c559c-99b0-510c-b3b7-b6c96a88d5cd"
 PlotlyBase = "a03496cd-edff-5a9b-9e67-9cda94a718b5"
 SwagUI = "bf05d729-34b2-4f1f-a2f1-2452bece7ebc"
