--- a/app/ML/Project.toml
+++ b/app/ML/Project.toml
@@ -1,16 +1,8 @@
 [deps]
+BSON = "fbb218c0-5317-5bc6-957e-2ee96dd4b1f0"
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 GenieFramework = "a59fdf5c-6bf0-4f5d-949c-a137c9e2f353"
-MLDatasets = "eb30cadb-4394-5ae3-aed4-317e484a6458"
+JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 PlotlyBase = "a03496cd-edff-5a9b-9e67-9cda94a718b5"
-Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
-Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
-
-[compat]
-DataFrames = "1.5.0"
-Flux = "0.13.17"
-GenieFramework = "1.19.0"
-MLDatasets = "0.7.9"
-Revise = "3.5.3"
-PlotlyBase = "0.8.19"
