--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,5 +19,13 @@
 
 	"remoteUser": "vscode"
 ,
-	"forwardPorts": [8000]
+	"forwardPorts": [8000],
+	"postCreateCommand": "mkdir -p ~/.julia/geniebuilder",
+	"postCreateCommand": "ln -s app/EDA/ ~/.julia/geniebuilder/EDA",
+	"postCreateCommand": "ln -s app/ML/ ~/.julia/geniebuilder/ML",
+	"postCreateCommand": "ln -s app/API/ ~/.julia/geniebuilder/API",
+	"postCreateCommand": "ln -s . ~/.julia/geniebuilder/MultiPage"
+	"postCreateCommand": "julia --startup-file=no --depwarn=no /home/vscode/.vscode-remote/extensions/geniebuilder.geniebuilder-0.4.10/scripts/rungb.jl",
+
+
 }
