--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,5 +19,7 @@
     "ghcr.io/julialang/devcontainer-features/julia:1": {}
 },
 	"postStartCommand": "mkdir -p ~/.julia/geniebuilder/apps",
+	"postStartCommand": "ln -s app/EDA/ ~/.julia/geniebuilder/EDA",
+	"postStartCommand": "ln -s app/ML/ ~/.julia/geniebuilder/ML",
 	"forwardPorts": [8000]
 }
