--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,6 +18,6 @@
 "features": {
     "ghcr.io/julialang/devcontainer-features/julia:1": {}
 },
-	"postStartCommand": "mkdir -p ~/.julia/geniebuilder/apps && ln -s app/EDA/ ~/.julia/geniebuilder/EDA && ln -s app/ML/ ~/.julia/geniebuilder/ML",
+	"postStartCommand": "mkdir -p ~/.julia/geniebuilder/apps && ln -s /workspaces/MultiPageApp/app/EDA/ ~/.julia/geniebuilder/apps/EDA && ln -s /workspaces/MultiPageApp/app/ML ~/.julia/geniebuilder/apps/ML && ln -s /workspaces/MultiPageApp/app/API ~/.julia/geniebuilder/apps/API && ln -s /workspaces/MultiPageApp/ ~/.julia/geniebuilder/apps/MultiPage",
 	"forwardPorts": [8000]
 }
