--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,9 @@
 		}
 	},
 "features": {
-    "ghcr.io/julialang/devcontainer-features/julia:1": {}
+    "ghcr.io/julialang/devcontainer-features/julia:1": {
+        "channel": "lts"
+    }
 },
 	"postStartCommand": "mkdir -p ~/.julia/geniebuilder/apps && ln -s /workspaces/MultiPageApp/app/EDA/ ~/.julia/geniebuilder/apps/EDA && ln -s /workspaces/MultiPageApp/app/ML ~/.julia/geniebuilder/apps/ML && ln -s /workspaces/MultiPageApp/app/API ~/.julia/geniebuilder/apps/API && ln -s /workspaces/MultiPageApp/ ~/.julia/geniebuilder/apps/MultiPage",
 	"forwardPorts": [8000]
