--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,6 +21,6 @@
 	     "channel": "1.9"
     }
 },
-	"postStartCommand": "startcmd.sh",
+	"postStartCommand": "sh startcmd.sh",
 	"forwardPorts": [8000]
 }
