--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,7 @@
 			// Add the IDs of extensions you want installed when the container is created.
 			"extensions": [
 				"julialang.language-julia",
-				"geniebuilder.geniebuilder"
+				"geniebuilder.geniebuilderinsider"
 
 			]
 		}
