--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,9 @@
 {
     "name": "Genie",
     "image": "julia",
+    "build": {
+        "dockerfile": "Dockerfile"
+    },
     "workspaceFolder": "/home/genie/MultiPageApp",
     "customizations": {
         "vscode": {
