--- a/Project.toml
+++ b/Project.toml
@@ -3,8 +3,21 @@ CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
+Genie = "c43c736e-a2d1-11e8-161f-af95117fbd1e"
 GenieFramework = "a59fdf5c-6bf0-4f5d-949c-a137c9e2f353"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 PlotlyBase = "a03496cd-edff-5a9b-9e67-9cda94a718b5"
 SwagUI = "bf05d729-34b2-4f1f-a2f1-2452bece7ebc"
 SwaggerMarkdown = "1b6eb727-ad4b-44eb-9669-b9596a6e760f"
+
+[compat]
+CSV = "0.10.11"
+DataFrames = "1.6.1"
+DelimitedFiles = "1.9.1"
+Flux = "0.14.6"
+GenieFramework = "1.22.0"
+Genie = "5.19.0"
+JLD2 = "0.4.35"
+PlotlyBase = "0.8.19"
+SwagUI = "0.10.0"
+SwaggerMarkdown = "0.2.1"
