--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ Genie = "c43c736e-a2d1-11e8-161f-af95117fbd1e"
 GenieFramework = "a59fdf5c-6bf0-4f5d-949c-a137c9e2f353"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 PlotlyBase = "a03496cd-edff-5a9b-9e67-9cda94a718b5"
+Stipple = "4acbeb90-81a0-11ea-1966-bdaff8155998"
 SwagUI = "bf05d729-34b2-4f1f-a2f1-2452bece7ebc"
 SwaggerMarkdown = "1b6eb727-ad4b-44eb-9669-b9596a6e760f"
 
@@ -15,8 +16,9 @@ CSV = "0.10.11"
 DataFrames = "1.6.1"
 DelimitedFiles = "1.9.1"
 Flux = "0.14.6"
-GenieFramework = "1.22.0"
 Genie = "5.19.0"
+GenieFramework = "^1.21.0"
+Stipple = "0.27.4"
 JLD2 = "0.4.35"
 PlotlyBase = "0.8.19"
 SwagUI = "0.10.0"
