--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,13 +14,11 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build . --file Dockerfile --tag pjgim/${{ env.NAME }}
 
     - name: Log in to Docker Hub
       run: echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
 
-    - name: Build and push Docker image
-      run: |
-        docker build . --file Dockerfile --tag pjgim/${{ env.NAME }}
-        docker push pjgim/${{ env.NAME }}
+    - name: Push Docker image
+      run: docker push pjgim/${{ env.NAME }}
 
