--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,11 +14,11 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag pjgim/${{ env.NAME }}
+      run: docker build . --file Dockerfile --tag "pjgim/${{ env.NAME }}"
 
     - name: Log in to Docker Hub
       run: echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
 
     - name: Push Docker image
-      run: docker push pjgim/${{ env.NAME }}
+      run: docker push "pjgim/${{ env.NAME }}"
 
